--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,15 +33,15 @@ services:
       - redis
 
 
-  celery_beat:
-    build:
-      context: .
-    hostname: beat
-    volumes:
-      - ./qwizmain:/qwizmain
-    entrypoint: celery
-    command: -A qwizmain beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
-    links:
-      - redis
-    depends_on:
-      - redis
+#  celery_beat:
+#    build:
+#      context: .
+#    hostname: beat
+#    volumes:
+#      - ./qwizmain:/qwizmain
+#    entrypoint: celery
+#    command: -A qwizmain beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+#    links:
+#      - redis
+#    depends_on:
+#      - redis
